Alignment fix in todos

--- a/examples/todos/style.css
+++ b/examples/todos/style.css
@@ -36,7 +36,7 @@ h1 {
 }
 
 #new-todo {
-  width: 218px;
+  width: 246px;
   margin-right: 4px;
 }
 #content {
@@ -59,7 +59,7 @@ h1 {
   width: 100%;
   height: 100%;
   position: relative;
-  min-width: 200px;
+  min-width: 250px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
